SIS2-786: Style and markup changes to facts-box to fix text being placed on top of itself on iPhone

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -102,16 +102,24 @@ media {
 }
 
 .undervi-box {
-  display: -webkit-box; /* stylelint-disable-line */
+  position: relative;
   max-height: 300px;
   overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 11;
-  -webkit-box-orient: vertical;
+
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(rgba(255, 255, 255, 0), #fff);
+    content: "";
+  }
 
   &--read-more {
     display: inline-flex;
-    padding-bottom: 15px;
+    padding-top: 20px;
+    padding-bottom: 30px;
     font-weight: 700;
 
     a {
